# SMP-agent

./: .env  .env.example  README.md  pyproject.toml
nemotron/: __init__.py  agent.py  config.py  main.py
nemotron/llm/: provider.py
nemotron/memory/: __init__.py  auto_index.py  context.py  smp_client.py
nemotron/tools/: __init__.py  base.py  file_ops.py  registry.py  shell.py  smp_tools.py
nemotron/ui/: __init__.py  terminal.py
